cmake_minimum_required(VERSION 2.8.2)

PROJECT(FILE_CONVERTER)

# Find Boost and add include dirs
FIND_PACKAGE(Boost COMPONENTS program_options REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})

# Find VTK and add include dirs
FIND_PACKAGE(VTK REQUIRED)
INCLUDE(${USE_VTK_FILE})

ADD_SUBDIRECTORY(src)

# if(BUILD_TESTING)
  ADD_SUBDIRECTORY(test)
# endif(BUILD_TESTING)
